# pbl

./: requirements.txt
flask-blog/: forms.py  myapp.py  pyproject.toml  requirements.txt
flask-blog/migrations/versions/: 00e1ee499de7_add_like_table.py  05c769296c74_add_user_id_column_as_nullable.py  4555825e3fd6_add_on_delete_cascade_to_like_table.py  4a68d3b98948_add_img_name.py  7811d04a2a62_create_user_model.py  7ac35931f6a0_increase_password_field_size.py  7b7934280e87_merge_multiple_heads.py  803c1e156452_add_likes_column_to_post.py  8f11cb9e8320_add_img_name_db_string_from_100_to_1000.py  b019b739ae86_add_user_id_column_to_post_model.py  baa5cfc4bb5f_add_icon_count_fields_to_post.py  bd8e97d09a07_add_postlike_model.py
flask-blog/templates/: admin.html  base.html  create.html  explanation.html  explanationvideo.html  index.html  login.html  ranking.html  readmore.html  signup.html  update.html
