[tool.poetry]
name = "flask-blog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.3.3"
psycopg = {extras = ["binary"], version = "^3.2.3"}
flask-sqlalchemy = "^3.1.1"
pytz = "^2024.2"
flask-migrate = "^4.0.7"
flask-login = "^0.6.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
